@@ -49,6 +49,10 @@ ProjectConfig
 ----------------------
 * ProjectConfig.toString() should return Project.toString() to avoid breaking external jmx scripts. Reported by Mark Hatton.
 
+SVN
+----------------------
+* Relax SVN externals parsing (CC-736). Reported by Patrick Muller.
+
 reporting jsp app
 ======================
 
